# e_drone

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: file.rs
src/: base.rs  communication.rs  drone.rs  file.rs  lib.rs  main.rs  protocol.rs  system.rs  test.rs
src/base/: convert.rs  extractor.rs  serializer.rs  system.rs
src/communication/: crc16.rs  extractor.rs  handler.rs  messaging.rs  mod.rs  receiver.rs  serializer.rs  transfer.rs
src/file/: mod.rs
src/protocol/: battle.rs  button.rs  buzzer.rs  card.rs  command.rs  communication.rs  control.rs  display.rs  joystick.rs  light.rs  mod.rs  monitor.rs  motor.rs  navigation.rs  sensor.rs  vibrator.rs
src/system/: mod.rs
