[package]
name = "e_drone"
version = "21.3.1"
authors = ["Sanghyo Lee <realwolf@naver.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "E-DRONE base library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.1"
